--- a/fundTimeValuation/.project
+++ b/fundTimeValuation/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>liuxiang</name>
+	<name>fundTimeValuation</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1514366902718</id>
+			<id>1531304287375</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -25,7 +25,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1532396061173</id>
+			<id>1532330739783</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -34,7 +34,16 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1532934891660</id>
+			<id>1532678081144</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-node_modules</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1535420455342</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
