--- a/loading/.project
+++ b/loading/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>fei</name>
+	<name>loading</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1525938539775</id>
+			<id>1538013465241</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
